--- a/css/classement.css
+++ b/css/classement.css
@@ -1,65 +1,99 @@
 .classement-main {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.classement-description, .classement-selector, .classement-display {
-    border: solid 1px white;
-    gap: 1%;
+.classement-description,
+.classement-selector,
+.classement-display {
+  border: solid 1px white;
+  gap: 1%;
 }
 
 .classement-main article {
-    width: 60%;
-    gap: 5%;
-
+  width: 60%;
+  gap: 5%;
 }
 
 .classement-main h1 {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .classement-selector select {
-    font-size: 30px;
-    color: white;
-    background-color: #1e1e24;
+  font-size: 30px;
+  color: white;
+  background-color: #1e1e24;
 }
 
 .classement-selector option {
-    font-size: 25px;
+  font-size: 25px;
 
-    color: white;
-    background-color: #1e1e24;
-
+  color: white;
+  background-color: #1e1e24;
 }
 
 .classement-display {
-    display: flex;
-    gap: 2%;
-    justify-content: center;
+  display: flex;
+  gap: 2%;
+  justify-content: center;
 }
 
 .classement-display div {
-    width: 50%;
+  width: 50%;
 }
 
 .classement-month table td {
-    text-align: center;
+  text-align: center;
 }
 
 .classement-month {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .classement-month table {
-    background-color: #B97958;
-    border: solid white 3px;
+  background-color: #b97958;
+  border: solid white 3px;
 }
 .classement-month tbody tr td img {
-    width: 64px;
-    border-radius: 50%;
+  width: 64px;
+  border-radius: 50%;
 }
+
+/* 
+
+  RESPONSIVE
+
+
+*/
+
+/* MOBILE VERSION */
+@media only screen and (max-width: 600px) {
+  .classement-games {
+    display: none;
+  }
+
+  .classement-month {
+    align-items: center;
+  }
+
+  .classement-month tbody tr td img {
+    width: 32px;
+  }
+  .classement-month table {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 830px) and (max-width: 1024px) {
+}
+/* 
+  
+    FIN RESPONSIVE
+  
+  
+  */
